--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.1.5",
     "@react-native-community/geolocation": "^2.0.2",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/drawer": "^6.3.1",
+    "@react-navigation/native": "^6.0.0",
     "@react-navigation/native-stack": "^6.5.0",
     "expo": "~44.0.0",
     "expo-location": "~14.0.1",
@@ -19,17 +22,23 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-dotenv": "^3.3.1",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-get-location": "^2.2.1",
+    "react-native-google-matrix": "0.0.3",
+    "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-location": "^2.5.0",
     "react-native-maps": "^0.30.1",
+    "react-native-maps-directions": "^1.8.0",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
