--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/native": "^6.0.0",
     "@react-navigation/native-stack": "^6.5.0",
-    "expo": "~44.0.0",
+    "expo": "^1.0.0",
     "expo-blur": "~11.0.0",
     "expo-location": "~14.0.1",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "react-native": "^0.61.4",
     "react-native-dotenv": "^3.3.1",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~2.1.0",
@@ -32,7 +32,7 @@
     "react-native-location": "^2.5.0",
     "react-native-maps": "^0.30.1",
     "react-native-maps-directions": "^1.8.0",
-    "react-native-reanimated": "~2.3.1",
+    "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-status-bar-height": "^2.6.0",
