--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
     "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "expo-app-loading": "~1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
