--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.0.0",
     "@react-navigation/native-stack": "^6.5.0",
     "expo": "^44.0.0",
+    "expo-app-loading": "^1.3.0",
     "expo-blur": "~11.0.0",
     "expo-location": "~14.0.1",
     "expo-status-bar": "~1.2.0",
@@ -41,7 +42,8 @@
     "react-native-web": "0.17.1",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
-    "expo-app-loading": "~1.3.0"
+    "react-redux": "^7.2.7",
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
