--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.0.0",
     "@react-navigation/native-stack": "^6.5.0",
     "expo": "^44.0.0",
+    "expo-app-loading": "~1.3.0",
     "expo-blur": "~11.0.0",
     "expo-location": "~14.0.1",
     "expo-status-bar": "~1.2.0",
@@ -40,8 +41,7 @@
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
     "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4",
-    "expo-app-loading": "~1.3.0"
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
